kustomizations/streaming/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: transmission.citocafecito.work
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: transmission
              port:
                number: 9091
